# orgutils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.rst  pyproject.toml
src/orgutils/: __main__.py  utils.py
src/orgutils/epub/: __main__.py  parsers.py
src/orgutils/kindle/: __main__.py  converters.py  exporters.py
src/orgutils/org/: structs.py
src/orgutils/snipd/: __main__.py  converter.py
src/orgutils/zotero/: __main__.py  db.py  docs.py  exporters.py  items.py
tests/orgutils/snipd/: test_converter.py
tests/orgutils/snipd/data/: dump-2024-08.md  dump-2024-10.md
