[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orgutils"
version = "23.7.0"
authors = [{name="Taro Sato", email="okomestudio@gmail.com"}]
description = "orgutils for Python"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "lxml",
    "markdown",
    "orgparse",
    "pdfminer.six",
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "flake8==6.0.0",
    "flake8-docstrings==1.7.0",
    "isort[pyproject]==5.12.0",
    "pre-commit==3.3.2",
    "pydocstyle[toml]==6.3.0",
]

test = [
    "coverage[toml]==7.2.7",
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.10.0",
]

[project.urls]
"Homepage" = "https://github.com/okomestudio/orgutils"
"Buck Tracker" = "https://github.com/okomestudio/orgutils/issues"

[project.scripts]
org-kindle-exporter = "orgutils.kindle.__main__:cli"
org-zotero-exporter = "orgutils.zotero.__main__:cli"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE.txt"]
include-package-data = true
package-data = {"orgutils" = []}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "except ImportError",
    "if __name__ == .__main__.:",
    "log(|ging).(debug|info|warning)",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.isort]
line_length = 88
force_single_line = false

[tool.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-vv --cov=orgutils --cov-report=term-missing"
testpaths = [
    "tests",
]
