[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orgutils"
version = "24.3.0"
authors = [{name="Taro Sato", email="okomestudio@gmail.com"}]
description = "orgutils for Python"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "lxml",
    "markdown",
    "orgparse",
    "pdfminer.six",
]

[project.optional-dependencies]
dev = [
    "types-lxml",
    "types-Markdown==3.5.0.3",
    "mypy==1.8.0",
    "pre-commit==3.6.1",
    "ruff==0.2.2",
]

test = [
    "coverage[toml]==7.2.7",
    "pytest==8.0.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]

[project.urls]
"Homepage" = "https://github.com/okomestudio/orgutils"
"Buck Tracker" = "https://github.com/okomestudio/orgutils/issues"

[project.scripts]
org-kindle-exporter = "orgutils.kindle.__main__:cli"
org-zotero-exporter = "orgutils.zotero.__main__:cli"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE.txt"]
include-package-data = true
package-data = {"orgutils" = []}

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "except ImportError",
    "if __name__ == .__main__.:",
    "log(|ging).(debug|info|warning)",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-vv --cov=orgutils --cov-report=term-missing"
testpaths = [
    "tests",
]

[too.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
  module = []
  ignore_missing_imports = true
