[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orgutils"
version = "24.10.0"
authors = [{name="Taro Sato", email="okomestudio@gmail.com"}]
description = "orgutils for Python"
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "lxml==5.3.0",
    "markdown==3.7",
    "orgparse==0.4.20231004",
    "panflute==2.3.1",
    "pdfminer.six==20240706",
    "pypandoc==1.14",
]

[project.optional-dependencies]
dev = [
    "mypy==1.12.0",
    "pre-commit==4.0.1",
    "ruff==0.6.9",
    "types-Markdown==3.7.0.20240822",
    "types-lxml==2024.9.16",
]

test = [
    "coverage[toml]==7.6.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest==8.3.3",
]

[project.urls]
"Homepage" = "https://github.com/okomestudio/orgutils"
"Buck Tracker" = "https://github.com/okomestudio/orgutils/issues"

[project.scripts]
org-from-kindle = "orgutils.kindle.__main__:cli"
org-from-snpid = "orgutils.snipd.__main__:cli"
org-from-zotero = "orgutils.zotero.__main__:cli"
snipdfilter = "orgutils.snipd.converter:cli"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE.txt"]
include-package-data = true
package-data = {"orgutils" = []}

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "except ImportError",
    "if __name__ == .__main__.:",
    "log(|ging).(debug|info|warning)",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-vv --cov=orgutils --cov-report=term-missing"
testpaths = [
    "tests",
]

[too.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
  module = []
  ignore_missing_imports = true
